fixes about container on mobile

--- a/src/components/About.css
+++ b/src/components/About.css
@@ -70,7 +70,7 @@
   flex-direction: column;
   align-items: center;
   max-width: 75vw;
-  max-height: 60vh;
+  max-height: 75vh;
   opacity: 0.7;
 }
 
